# OpenYC-OS

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  configure  configure.bat
Makefiles/: Windows.mak
script/: img-write-linux.sh
script/init/: Linux.sh
src/boot/: boot.asm
src/loader/: boot.asm  loader.asm
src/tools/shell/: CMakeLists.txt
